--- a/Notebooks/01_SQLDatabase.ipynb
+++ b/Notebooks/01_SQLDatabase.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "20710bb0",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "63632b8b",
    "metadata": {},
    "outputs": [],
@@ -125,10 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "3b2a5f22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existence of Database fsqa: True\n"
+     ]
+    }
+   ],
    "source": [
     "with psycopg.connect(user=db_settings['user'], password=db_settings['password'], autocommit=True) as conn:\n",
     "    with conn.cursor() as cur:\n",
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "98cd954f",
    "metadata": {},
    "outputs": [
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "b7baa6d6",
    "metadata": {},
    "outputs": [
@@ -242,7 +250,7 @@
        " 'income_statement': ('is_id', 'code', 'rpid', 'quarter', 'account', 'value')}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +261,6 @@
     "    ('fs_id', 'code', 'rpid', 'bsns_year'),\n",
     "    ('bs_id', 'code', 'rpid', 'quarter', 'account', 'value'),\n",
     "    ('is_id', 'code', 'rpid', 'quarter', 'account', 'value'),\n",
-    "    # ('cf_id', 'code', 'rpid', 'account', 'value')\n",
     "]\n",
     "tables = dict(zip(table_names, table_columns))\n",
     "tables"
@@ -271,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "ae52bcb0-9604-46c8-b28e-9a0988c47664",
    "metadata": {},
    "outputs": [
@@ -303,9 +310,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>359</th>\n",
+       "      <th>705</th>\n",
        "      <td>005930</td>\n",
-       "      <td>삼성전자</td>\n",
+       "      <td>SamsungElec</td>\n",
        "      <td>통신 및 방송 장비 제조업</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -313,11 +320,11 @@
        "</div>"
       ],
       "text/plain": [
-       "     Symbol  Name          Sector\n",
-       "359  005930  삼성전자  통신 및 방송 장비 제조업"
+       "     Symbol         Name          Sector\n",
+       "705  005930  SamsungElec  통신 및 방송 장비 제조업"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "ce8bf15f",
    "metadata": {},
    "outputs": [],
@@ -364,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "cf071b11-57a3-47d0-a6b3-590e0916cc0c",
    "metadata": {
     "tags": []
@@ -389,7 +396,7 @@
     "# stocks_syms = stocks.loc[stocks['Symbol']==corp, 'Symbol'].values\n",
     "data_path = src_path / 'data'\n",
     "df_account = pd.read_csv(data_path / 'AccountName.csv')\n",
-    "account_eng_dict = dict(zip(df_account['acc_name_kor'].values, df_account['acc_name_eng'].values))\n",
+    "account_eng_dict = dict(zip(df_account['acc_name_kor'].values, df_account['acc'].values))\n",
     "\n",
     "bsns_years = list(range(2015, 2022))\n",
     "report_codes = ['11011', '11013', '11012', '11014']\n",
@@ -442,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "b257c35e",
    "metadata": {},
    "outputs": [
@@ -471,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "053ba093",
    "metadata": {},
    "outputs": [],
@@ -514,27 +521,27 @@
     "        \"\"\"\n",
     "        CREATE VIEW vt_is_005930\n",
     "        AS \n",
-    "        SELECT fs.bsns_year, inc.quarter, inc.account, inc.value\n",
+    "        SELECT fs.bsns_year AS bsns_year, inc.quarter AS quarter, inc.account AS account, inc.value AS value\n",
     "        FROM income_statement AS inc\n",
     "        INNER JOIN company AS com\n",
     "            ON com.code = inc.code\n",
     "        INNER JOIN financial_statement AS fs\n",
     "            ON fs.code = inc.code AND fs.rpid = inc.rpid\n",
     "        WHERE\n",
-    "            com.name = '삼성전자' AND fs.bsns_year BETWEEN 2016 AND 2021;\n",
+    "            com.name = 'SamsungElec' AND fs.bsns_year BETWEEN 2016 AND 2021;\n",
     "        \"\"\")\n",
     "        # VIEW TABLE: Balance Sheet\n",
     "        cur.execute(\"\"\"\n",
     "        CREATE VIEW vt_bs_005930\n",
     "        AS \n",
-    "        SELECT fs.bsns_year, bal.quarter, bal.account, bal.value\n",
+    "        SELECT fs.bsns_year AS bsns_year, bal.quarter AS quarter, bal.account AS account, bal.value AS value\n",
     "        FROM balance_sheet AS bal\n",
     "        INNER JOIN company AS com\n",
     "            ON com.code = bal.code\n",
     "        INNER JOIN financial_statement AS fs\n",
     "            ON fs.code = bal.code AND fs.rpid = bal.rpid\n",
     "        WHERE\n",
-    "            com.name = '삼성전자' AND fs.bsns_year BETWEEN 2016 AND 2021;\n",
+    "            com.name = 'SamsungElec' AND fs.bsns_year BETWEEN 2016 AND 2021;\n",
     "        \"\"\")"
    ]
   },
@@ -568,57 +575,6 @@
    ],
    "source": [
     "tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "57957c48-c677-4ea8-8e8b-0024693b2644",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nSELECT T.value FROM vs_is_005930\\nWHERE T.account = \"Revenue\" AND T.time = \\n'"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# VIEW TABLE: Income Statement\n",
-    "\"\"\"\n",
-    "CREATE VIEW vt_is_005930\n",
-    "AS \n",
-    "SELECT fs.bsns_year, inc.quarter, inc.account, inc.value\n",
-    "FROM income_statement AS inc\n",
-    "INNER JOIN company AS com\n",
-    "    ON com.code = inc.code\n",
-    "INNER JOIN financial_statement AS fs\n",
-    "    ON fs.code = inc.code AND fs.rpid = inc.rpid\n",
-    "WHERE\n",
-    "    com.name = '삼성전자' AND fs.bsns_year BETWEEN 2016 AND 2021\n",
-    "\"\"\"\n",
-    "# VIEW TABLE: Balance Sheet\n",
-    "\"\"\"\n",
-    "CREATE VIEW vt_bs_005930\n",
-    "AS \n",
-    "SELECT fs.bsns_year, bal.quarter, bal.account, bal.value\n",
-    "FROM balance_sheet AS bal\n",
-    "INNER JOIN company AS com\n",
-    "    ON com.code = bal.code\n",
-    "INNER JOIN financial_statement AS fs\n",
-    "    ON fs.code = bal.code AND fs.rpid = bal.rpid\n",
-    "WHERE\n",
-    "    com.name = '삼성전자' AND fs.bsns_year BETWEEN 2016 AND 2021\n",
-    "\"\"\"\n",
-    "# SELECT Past value\n",
-    "\"\"\"\n",
-    "SELECT T.value FROM vt_is_005930 AS T\n",
-    "WHERE T.account = 'Revenue' AND T.bsns_year = 2020 AND T.quarter = '4Q'\n",
-    "\"\"\""
    ]
   },
   {
